--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "foundation-bem-grid",
+  "version": "1.0.0",
   "description": "Modern Sass BEM Grid for Foundation 6",
   "main": "scss/_bem-grid.scss",
   "dependencies": {
